--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "author": "Emilia Cabral",
   "devDependencies": {
+    "@types/inquirer": "^9.0.7",
     "@types/node": "^20.11.0",
     "tsx": "^4.19.3",
     "typescript": "5.7.2"
   },
   "dependencies": {
-    "commander": "^13.1.0"
+    "chalk": "^5.4.1",
+    "commander": "^13.1.0",
+    "inquirer": "^12.4.2"
   }
 }
