--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
+    "dotenv": "^16.4.7",
     "inquirer": "^12.4.2"
   }
 }
