--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "allowImportingTsExtensions": true,
-    "noEmit": true
+    "outDir": "bin",
+    "allowImportingTsExtensions": false,
+    "emitDeclarationOnly": false,
+    "declaration": true
   },
   "include": ["src"]
 }
