--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
+    "image-size": "^2.0.0",
     "inquirer": "^12.4.2"
   }
 }
