Add testing setup and Node.js version configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "emitDeclarationOnly": false,
     "declaration": true
   },
-  "include": ["src"]
+  "include": ["src", "tests"],
+  "exclude": ["node_modules"]
 }
